<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/my_meal_plans"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/my_meal_plans"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/recepies_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/recipes_search"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/new_plan"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_plan"

        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/plan_history"
        android:icon="@drawable/ic_chart"
        android:title="@string/plan_history"
        app:showAsAction="ifRoom|withText" />
</menu>