<?xml version="1.0" encoding="utf-8"?>

<android.widget.ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textRec2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/textview"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ingredients"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textViewRecipeOnWeb"
                app:layout_constraintTop_toBottomOf="@+id/recipeOnWeb" />

            <ImageView
                android:id="@+id/coverImage2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:contentDescription="@string/cover_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.427"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/recipeIngredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewIngredients"
                app:layout_constraintTop_toTopOf="@+id/textViewIngredients" />

            <TextView
                android:id="@+id/textViewNumPersons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:text="@string/number_of_persons"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/calories"
                app:layout_constraintTop_toTopOf="@+id/calories" />

            <TextView
                android:id="@+id/numPersons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintStart_toEndOf="@+id/textViewNumPersons"
                app:layout_constraintTop_toTopOf="@+id/textViewNumPersons" />

            <TextView
                android:id="@+id/textViewPrepTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/time"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/time"
                app:layout_constraintStart_toEndOf="@+id/numPersons"
                app:layout_constraintTop_toTopOf="@+id/numPersons" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewPrepTime" />

            <TextView
                android:id="@+id/textViewRecipeOnWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/recipe_on_web"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coverImage2" />

            <TextView
                android:id="@+id/recipeOnWeb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:autoLink="web"
                android:linksClickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewRecipeOnWeb"
                app:layout_constraintTop_toTopOf="@+id/textViewRecipeOnWeb" />

            <TextView
                android:id="@+id/textViewCalories"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/calories"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRec2" />

            <TextView
                android:id="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintStart_toEndOf="@+id/textViewCalories"
                app:layout_constraintTop_toTopOf="@+id/textViewCalories" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipeIngredients" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </android.widget.ScrollView>

